# AiClipper

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/worker/: README.md  package.json  pyproject.toml
apps/worker/scripts/: apply_migration_0005.py  heal_orphans.py  inspect_db.py  inspect_state.py  repair_migrations.py  reset_job.py  reset_workers.py  retry_transcribe.py  smoke_analyze.py  smoke_db.py  smoke_ingest.py  smoke_render.py  smoke_transcribe.py  smoke_twelvelabs.py  test_twelvelabs_clamp.py  warm_whisper.py
apps/worker/tests/: test_config_learn.py  test_profile_ranker.py  test_profile_system.py  test_source_url.py
apps/worker/worker/: __init__.py  config.py  db.py  ids.py  logging.py  main.py  models.py  pipeline_report.py  pipeline_timing.py
apps/worker/worker/analyze/: __init__.py  audio_features.py  candidate_fusion.py  candidates.py  chat_features.py  enrichment.py  gemini.py  gemini_multimodal.py  pipeline.py  ranking_weights.py  scene_features.py  signal_peaks.py  signal_timeline.py  twelvelabs_convert.py  twelvelabs_prompts.py
apps/worker/worker/api/: admin.py  health.py  jobs.py
apps/worker/worker/jobs/: __init__.py  analyze.py  cancellation.py  candidate_generate.py  caption.py  enrich_training_feedback.py  feature_extract.py  handlers.py  ingest.py  pipeline_enqueue.py  profile_evaluate.py  profile_retrain_from_feedback.py  profile_score.py  profile_train.py  publish.py  queue.py  reedit.py  reference_clip_import.py  reference_feature_extract.py  render.py  runner.py  transcribe.py  twelvelabs_analyze.py  twelvelabs_index.py
apps/worker/worker/media/: __init__.py  ffmpeg_util.py  paths.py  probe.py  source_url.py  twelvelabs_split.py
apps/worker/worker/profile/: __init__.py  bridge.py  candidates.py  cleanup.py  config.py  config_learn.py  dataset_ready.py  embeddings.py  features.py  (+11 more)
(+140 files in other folders)
