[project]
name = "aiclipper-worker"
version = "0.1.0"
description = "AiClipper background worker: ingest, transcribe, analyze, render, publish."
requires-python = ">=3.11,<3.13"
readme = "README.md"

dependencies = [
    # HTTP API
    "fastapi>=0.118,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.1.3",
    # Settings + validation
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "python-dotenv>=1.0",
    # Database (shared SQLite file with the Next.js app)
    "sqlalchemy>=2.0.36,<3.0",
    # ID generation (matches Drizzle's nanoid(12) format)
    "nanoid>=2.0.0",
    # Logging
    "structlog>=24.4",
    # HTTP client for external APIs
    "httpx>=0.27",
]

[project.optional-dependencies]
# Installed in Step 5 (ingest pipeline)
ingest = [
    "yt-dlp>=2025.1.15",
    "ffmpeg-python>=0.2.0",
]
# Installed in Step 6 (transcription)
transcribe = [
    # faster-whisper bundles CTranslate2; CUDA libs come from the system.
    "faster-whisper>=1.1.0",
]
# Installed in Step 7 (highlight analysis)
analyze = [
    "librosa>=0.10.2",
    "scenedetect[opencv]>=0.6.5",
    "google-genai>=1.0.0",
]
# Installed in Step 8/9/10 (clip rendering, thumbnails)
render = [
    "pillow>=10.4",
    "mediapipe>=0.10.18",
]
# Installed in Step 12/13 (uploads)
upload = [
    "google-auth>=2.36",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.151",
]

[project.scripts]
aiclipper-worker = "worker.main:run_cli"

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["worker*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]
